--- a/homework/mvc/app/Views/login.twig
+++ b/homework/mvc/app/Views/login.twig
@@ -1,16 +1,16 @@
 {% include 'temp/header.twig' %}
 
-{#<div class="form">#}
-    {#<h1>Войти в аккаут!</h1>#}
-    {#<div class="desc">#}
-        {#Укажите Ваше имя и пароль для входа#}
-    {#</div>#}
+<div class="form">
+    <h1>Войти в аккаут!</h1>
+    <div class="desc">
+        Укажите Ваше имя и пароль для входа
+    </div>
 
-    {#<form action="" method="post">#}
-        {#<input type="text" placeholder="Ваше имя:">#}
-        {#<input type="number" placeholder="Ваш пароль:" class="acc">#}
-        {#<input type="submit" value="Войти" class="link">#}
-    {#</form>#}
-{#</div>#}
+    <form action="login" method="post">
+        <input type="email" name="email" placeholder="Ваш логин">
+        <input type="number" name="password" placeholder="Ваш пароль" class="acc">
+        <input type="submit" value="Войти" class="link">
+    </form>
+</div>
 
 {% include 'temp/footer.twig' %}
