eloquent error add files photo 4

--- a/homework/mvc/app/Views/login.twig
+++ b/homework/mvc/app/Views/login.twig
@@ -11,6 +11,7 @@
         <input type="number" name="password" placeholder="Ваш пароль" class="acc">
         <input type="submit" value="Войти" class="link">
     </form>
+    <a href="/user/pageReg" class="link_reg">Регистрация</a>
 </div>
 
 {% include 'temp/footer.twig' %}
