Вывел пользователей в акк и сделал стили.

--- a/homework/mvc/app/Views/login.twig
+++ b/homework/mvc/app/Views/login.twig
@@ -8,7 +8,7 @@
 
     <form action="login" method="post">
         <input type="email" name="email" placeholder="Ваш логин">
-        <input type="number" name="password" placeholder="Ваш пароль" class="acc">
+        <input type="password" name="password" placeholder="Ваш пароль" class="acc">
         <input type="submit" value="Войти" class="link">
     </form>
     <a href="/user/pageReg" class="link_reg">Регистрация</a>
