--- a/homework/mvc/app/Views/users.twig
+++ b/homework/mvc/app/Views/users.twig
@@ -15,14 +15,15 @@
             <th>Имя</th>
             <th>
                 {% if sort %}
-                    <a href="/user/showlist/" class="table-title">Взрослый <i class="fas fa-sort-down"></i></a>
+                    <a href="/user/administrator/" class="table-title">ASC/DESC<i class="fas fa-sort-down"></i></a>
                 {% else %}
-                    <a href="/user/showlist/?sort=desc" class="table-title">Взрослый <i class="fas fa-sort-up"></i></a>
+                    <a href="/user/administrator/?sort=desc" class="table-title">ASC/DESC<i class="fas fa-sort-up"></i></a>
                 {% endif %}
             </th>
             <th>Возраст</th>
             <th>Аватар</th>
-            <th>Управление</th>
+            <th>Описание</th>
+            <th>Галерея</th>
         </tr>
         </thead>
         <tbody>
@@ -39,8 +40,8 @@
                 </td>
                 <td>{{ user.age }}</td>
                 <td><img src="{{ user.photo }}" class="avatar"></td>
+                <td><p>{{ user.info }}</p></td>
                 <td>
-                    <a href="/user/show/?id={{ user.id }}" class="btn btn-success">Показать инфу</a>
                     <a href="/file/show/?id={{ user.id }}" class="btn btn-info">Все фото</a>
                 </td>
             </tr>
